# flet

./: README.md  plane.md  pyproject.toml
.agents/skills/flet-app/: .skillfish.json  SKILL.md
.agents/skills/flet-app/agents/: openai.yaml
.agents/skills/flet-app/references/: api-traps.md  architecture.md  breaking-changes.md  error-guide.md  new-controls.md
.github/workflows/: all-builds.yml  generate-android-keystore.yml
src/: cookies.txt  downloader.py  library.py  main.py  player.py
