[project]
name = "vidsaver"
version = "1.2.8"
description = ""
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Fazi-Gondal", email = "nextinpk@gmail.com" }
]
dependencies = [
    "flet==0.85.3",
    "flet-video==0.85.3",
    "flet-media-scanner",
    "yt-dlp",
    "requests",
    "certifi",
    "charset-normalizer",
    "idna",
    "urllib3"
]

[dependency-groups]
dev = [
    "flet-cli==0.85.3",
    "flet-desktop==0.85.3",
    "flet-web==0.85.3",
]

[tool.flet]
org = "com.fazi"
product = "Vidsaver"
company = "NextInPK"
copyright = "Copyright (C) 2023-2026 by Fazi-Gondal"

[tool.flet.icons]
android = "assets/icon.png"
splash_android = "assets/splash_android.png"

[tool.flet.app]
path = "src"

[tool.flet.android]
split_per_abi = true
target_arch = ["arm64-v8a"]
dependencies = [
    "certifi",
    "charset-normalizer",
    "idna",
    "requests",
    "urllib3",
    "yt-dlp",
    "flet-media-scanner",
]

[tool.flet.android.permission]
"android.permission.INTERNET" = true

[tool.flet.extensions]
flet_media_scanner = "flet_media_scanner.Extension"

[tool.flet.dev_packages]
flet-media-scanner = "packages/flet-media-scanner"

[tool.uv.sources]
flet-media-scanner = { workspace = true }

[tool.uv.workspace]
members = ["packages/flet-media-scanner"]
